--- a/client/src/components/quiz/quizStyles.css
+++ b/client/src/components/quiz/quizStyles.css
@@ -21,6 +21,7 @@
     display: flex;
     font-size: 24px;
     align-items: center;
+    color: white;
   }
   
   /* QUESTION/TIMER/LEFT SECTION */
@@ -39,6 +40,10 @@
   
   .question-text {
     margin-bottom: 12px;
+    color: white;
+  }
+  .question-number{
+    color: white;
   }
   
   .timer-text {
