--- a/client/src/components/quiz/quizStyles.css
+++ b/client/src/components/quiz/quizStyles.css
@@ -4,17 +4,20 @@
     justify-content: center;
     align-items: center;
     min-height: 100vh;
+    
 }
 .app {
     background-color: #252d4a;
     width: 450px;
-    min-height: 200px;
-    height: min-content;
+    
+    /* height: min-content; */
     border-radius: 15px;
     padding: 20px;
     box-shadow: 10px 10px 42px 0px rgba(0, 0, 0, 0.75);
     display: flex;
     justify-content: space-evenly;
+    height:40%;
+    width: 50%;
   }
   
   .score-section {
